membuat header dan footer

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <header>ini header</header>
     <h1>PT. Maju Sejahtera</h1>
 
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptatum temporibus tenetur laudantium debitis. Impedit non, dignissimos odit excepturi voluptatum autem, error commodi sint accusantium cum laboriosam quas! Quae, tenetur.</div>
+
+    <footer>Ini adalah footer sederhana</footer>
 </body>
 </html>
