--- a/contact-us.html
+++ b/contact-us.html
@@ -11,6 +11,8 @@
 
     <div>Ini halaman contact</div>
 
+    <div>perubahan</div>
+
     <footer>Ini adalah footer sederhana</footer>
 </body>
 </html>
